# StudyTypeTeller

./: .gitignore  README.md  conda_environment.yml  pyproject.toml
.ipynb_checkpoints/: credentials-checkpoint.txt
data/: Data_Preparation.ipynb  Data_Preparation_and_Postprocessing.ipynb  Inter_Annotator_Agreement.ipynb  evaluation_prompts.xlsx  rayyan_df_missing_pmid.csv  test_contents.txt
models/: Annotate with GPT Assistant.ipynb  Annotate with GPT.ipynb  Annotate_with_GPT_Assistant.ipynb  Annotate_with_GPT_Example_shirin.ipynb  Annotate_with_GPT_Prompts.ipynb  Annotate_with_GPT_Prompts_binary.ipynb  Annotate_with_GPT_Prompts_binary_shirin.ipynb  Annotate_with_GPT_Prompts_hierarchical.ipynb  Annotate_with_GPT_Prompts_hierarchical_shirin.ipynb  Annotate_with_GPT_Prompts_hierarchical_shirin_new.ipynb  Annotate_with_GPT_Prompts_multi-label.ipynb  Annotate_with_GPT_Prompts_multi-label_shirin.ipynb  Annotate_with_GPT_Prompts_new_shirin.ipynb  Annotate_with_GPT_Prompts_sampled_dataset_shirin.ipynb  Annotate_with_GPT_Prompts_shirin.ipynb  Annotate_with_GPT_stepbystep_shirin.ipynb  Evaluation_GPT.ipynb  Evaluation_GPT_binary_shirin.ipynb  Evaluation_GPT_binary_with_CI.ipynb  Evaluation_GPT_binary_with_CI_shirin.ipynb  Evaluation_GPT_hierarchical_shirin.ipynb  Evaluation_GPT_hierarchical_with_CI.ipynb  Evaluation_GPT_hierarchical_with_CI_shirin.ipynb  Evaluation_GPT_multi-label_CI_LaTextables_shirin.ipynb  Evaluation_GPT_multi-label_CI_shirin.ipynb  Evaluation_GPT_multi-label_shirin.ipynb  Evaluation_GPT_multi-label_with_CI.ipynb  Evaluation_GPT_shirin.ipynb  (+6 more)
(+591 files in other folders)
