[tool.poetry]
name = "pubmed-abstract-classifier"
version = "0.1.0"
description = "Project to develop classifier for PubMed abstract types."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pubmed_abstract_classifier"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
